--- a/interactcv.html
+++ b/interactcv.html
@@ -137,6 +137,73 @@
             border-color: var(--color-accent);
             box-shadow: 0 0 0 2px white;
         }
+        #mobile-menu {
+            transform: translateY(-20px) scale(0.95);
+            opacity: 0;
+            max-height: 0;
+            transition: transform 0.3s ease-out, opacity 0.3s ease-out, max-height 0.3s ease-out;
+            pointer-events: none;
+        }
+        #mobile-menu.menu-open {
+            transform: translateY(0) scale(1);
+            opacity: 1;
+            max-height: 500px;
+            pointer-events: auto;
+        }
+        @media print {
+            body {
+                background-color: #fff;
+                color: #000;
+                font-size: 10pt;
+            }
+            #theme-switcher, #navbar, #back-to-top, #contact, footer, .video-container, .w-1\/4.mx-auto {
+                display: none !important;
+            }
+            header h1 {
+                background: none !important;
+                -webkit-text-fill-color: initial !important;
+                color: #000 !important;
+                font-size: 24pt;
+            }
+             header h2 {
+                font-size: 14pt;
+            }
+            main {
+                margin: 0 !important;
+            }
+            section {
+                margin-top: 2rem !important;
+                page-break-inside: avoid;
+            }
+            .scroll-animate {
+                opacity: 1 !important;
+                transform: translateY(0) !important;
+            }
+            .details-content, .project-content {
+                max-height: none !important;
+                display: block !important;
+                padding: 0 !important;
+                margin: 0 !important;
+            }
+            .timeline-header svg, .accordion-header svg {
+                display: none;
+            }
+            .bg-gray-50 {
+                background-color: #fff !important;
+            }
+            .shadow-lg, .shadow-xl, .shadow-2xl {
+                box-shadow: none !important;
+            }
+            .border, .border-l-2 {
+                border: none !important;
+            }
+             .pl-8 {
+                padding-left: 0 !important;
+            }
+            .timeline-item::before {
+                display: none;
+            }
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -178,19 +245,22 @@
                     </div>
                 </div>
             </div>
-            <div class="md:hidden hidden" id="mobile-menu">
-                <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 text-center">
-                    <a href="#summary" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Summary</a>
-                    <a href="#video" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Video Intro</a>
-                    <a href="#timeline" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Timeline</a>
-                    <a href="#skills" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Skills</a>
-                    <a href="#recommendations" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Recs</a>
-                    <a href="#education" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Education</a>
-                    <a href="#portfolio" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Portfolio</a>
-                    <a href="#contact" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Contact</a>
-                </div>
-            </div>
         </nav>
+        
+        <!-- Mobile Menu Panel -->
+        <div id="mobile-menu" class="md:hidden fixed top-24 left-4 right-4 z-40 bg-[var(--color-accent-translucent)] backdrop-blur-md rounded-2xl shadow-xl overflow-hidden">
+             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 text-center">
+                <a href="#summary" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Summary</a>
+                <a href="#video" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Video Intro</a>
+                <a href="#timeline" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Timeline</a>
+                <a href="#skills" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Skills</a>
+                <a href="#recommendations" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Recs</a>
+                <a href="#education" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Education</a>
+                <a href="#portfolio" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Portfolio</a>
+                <a href="#contact" class="text-white hover:bg-white/20 block px-3 py-2 rounded-md text-base font-medium">Contact</a>
+            </div>
+        </div>
+
 
         <main class="mb-24">
             <section id="summary" class="scroll-mt-24 scroll-animate">
@@ -380,15 +450,18 @@
                  <h3 class="text-3xl font-bold text-center text-gray-800">Get In Touch</h3>
                  <p class="text-center mt-2 max-w-4xl mx-auto text-lg text-gray-600">I'm always open to discussing new projects, creative ideas, or opportunities to be part of an ambitious vision.</p>
                 <div class="mt-8 max-w-lg mx-auto bg-white p-8 rounded-2xl shadow-xl border border-gray-100 flex justify-center items-center space-x-8">
-                     <a href="https://www.linkedin.com/in/vishalkondabathini/" target="_blank" class="text-gray-600 hover:color-primary transition-colors transform hover:scale-110">
+                     <a href="https://www.linkedin.com/in/vishalkondabathini/" target="_blank" class="text-gray-600 hover:color-primary transition-colors transform hover:scale-110" title="LinkedIn">
                         <i class="fab fa-linkedin fa-3x"></i>
                      </a>
-                      <a href="mailto:vishal@digitalcubes.org" class="text-gray-600 hover:color-primary transition-colors transform hover:scale-110">
+                      <a href="mailto:vishal@digitalcubes.org" class="text-gray-600 hover:color-primary transition-colors transform hover:scale-110" title="Email">
                         <i class="fas fa-envelope fa-3x"></i>
                      </a>
-                     <a href="tel:+46722776202" class="text-gray-600 hover:color-primary transition-colors transform hover:scale-110">
+                     <a href="tel:+46722776202" class="text-gray-600 hover:color-primary transition-colors transform hover:scale-110" title="Call">
                         <i class="fas fa-phone-square fa-3x"></i>
                      </a>
+                     <a href="https://outlook.office.com/bookwithme/user/88884629b7904992b18f1c1af463c9b7@digitalcubes.org/meetingtype/cqT9-JX9ikyppCIkSQ7u3A2?anonymous&ismsaljsauthenabled&ep=mLinkFromTile" target="_blank" class="text-gray-600 hover:color-primary transition-colors transform hover:scale-110" title="Book a Meeting">
+                        <i class="fas fa-calendar-check fa-3x"></i>
+                    </a>
                 </div>
             </section>
 
@@ -442,7 +515,7 @@ document.addEventListener('DOMContentLoaded', () => {
         {
             company: "GN Audio A/S - Jabra",
             duration: "4.3 Years",
-            period: "2018 – 2022",
+            period: "2018 – 2023",
             location: "Copenhagen, Denmark",
             roles: [
                  {
@@ -454,7 +527,7 @@ document.addEventListener('DOMContentLoaded', () => {
                     points: ["Established and drove the data management strategy for Global Quality, managing a team of data analysts and overseeing the Quality KPI's data platform.","Introduced MLOps (DataRobot) practices to the Quality organization, enabling predictive insights that reduced quality issues in manufacturing by ~10%.","Collaborated with key stakeholders to surface relevant data insights, continuously creating business value and impact across the product lifecycle."]
                 },
                 {
-                    title: "Product Quality Manager, Software Quality (2 Years)",
+                    title: "Software Quality Manager, Product Quality Management (2 Years)",
                     points: ["Getting Jabra products ready for launch by identifying key quality improvements.", "Utilize internal & external feedback to indicate the risks and prioritizing software quality improvements.", "Key quality driver & stakeholder of Jabra's Evolve2 series & Elite75t products."]
                 }
             ]
@@ -877,23 +950,25 @@ document.addEventListener('DOMContentLoaded', () => {
     const hamburgerIcon = document.getElementById('hamburger-icon');
     const closeIcon = document.getElementById('close-icon');
 
-    mobileMenuButton.addEventListener('click', () => {
-        const isExpanded = mobileMenuButton.getAttribute('aria-expanded') === 'true';
+    const toggleMenu = () => {
+        const isExpanded = mobileMenu.classList.contains('menu-open');
         mobileMenuButton.setAttribute('aria-expanded', !isExpanded);
-        mobileMenu.classList.toggle('hidden');
+        mobileMenu.classList.toggle('menu-open');
         hamburgerIcon.classList.toggle('hidden');
         closeIcon.classList.toggle('hidden');
-    });
+    };
+    
+    mobileMenuButton.addEventListener('click', toggleMenu);
 
     const mobileMenuLinks = mobileMenu.querySelectorAll('a');
     mobileMenuLinks.forEach(link => {
         link.addEventListener('click', () => {
-            mobileMenu.classList.add('hidden');
-            hamburgerIcon.classList.remove('hidden');
-            closeIcon.classList.add('hidden');
-            mobileMenuButton.setAttribute('aria-expanded', 'false');
+            if (mobileMenu.classList.contains('menu-open')) {
+                toggleMenu();
+            }
         });
     });
+
 
     // --- Theme Switcher ---
     const themeButtons = document.querySelectorAll('.theme-button');
