--- a/interactcv.html
+++ b/interactcv.html
@@ -599,7 +599,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     const projectPortfolioData = [
         {
-            title: "GoGemba - Digital Companion for Process Confirmations & Daily Improvements",
+            title: "Digital Platform for Process Confirmations & Daily Improvements",
             summary: "Dynamic platform designed to enhance visibility and management of process adherence (GxP compliance). It systematically verifies standard procedures and enables proactive continuous improvement actions.",
             features: ["Reusable Checklists/Questions (multi-language)", "Planned & Instant Process Confirmations", "Action Creation and Management from PC Executions","Visual Management of Planned PC's and Reporting on Trends"],
             benefits: ["Enhanced Operational Efficiency (reduces manual planning)", "Improved Quality Assurance", "Proactive Actions and Resolution", "Data-Driven Insights"],
@@ -638,7 +638,7 @@ document.addEventListener('DOMContentLoaded', () => {
             tags: [
                 { icon: '🚀', text: 'Live (Oct 2025)', color: 'blue' },
                 { icon: '🛡️', text: 'Validated', color: 'yellow' },
-                { icon: '👥', text: '140+ Users', color: 'green' }
+                { icon: '👥', text: '250+ Users', color: 'green' }
             ]
         },
         {
