Minor update to CV

--- a/interactcv.html
+++ b/interactcv.html
@@ -570,7 +570,7 @@ document.addEventListener('DOMContentLoaded', () => {
         },
         "Technical Mastery & Tools": {
             icon: '💻',
-            skills: [{ name: "Atlassian Suit (Jira & Confluence)", level: getLevel("Atlassian Suit (Jira & Confluence)", "Expert") },{ name: "Azure Cloud", level: getLevel("Azure Cloud", "Advanced") },{ name: "Azure DevOps", level: getLevel("Azure DevOps", "Expert") },{ name: "Microsoft Fabric", level: getLevel("Microsoft Fabric", "Expert") },{ name: "Microsoft Power Platform", level: getLevel("Microsoft Power Platform", "Expert") },{ name: "Miro", level: getLevel("Miro", "Expert") },{ name: "MLOps (DataRobot)", level: getLevel("MLOps (DataRobot)", "Proficient") },{ name: "Python", level: getLevel("Python", "Proficient") }].sort((a, b) => a.name.localeCompare(b.name))
+            skills: [{ name: "Atlassian Suite (Jira & Confluence)", level: getLevel("Atlassian Suite (Jira & Confluence)", "Expert") },{ name: "Azure Cloud", level: getLevel("Azure Cloud", "Advanced") },{ name: "Azure DevOps", level: getLevel("Azure DevOps", "Expert") },{ name: "Microsoft Fabric", level: getLevel("Microsoft Fabric", "Expert") },{ name: "Microsoft Power Platform", level: getLevel("Microsoft Power Platform", "Expert") },{ name: "Miro", level: getLevel("Miro", "Expert") },{ name: "MLOps (DataRobot)", level: getLevel("MLOps (DataRobot)", "Proficient") },{ name: "Python", level: getLevel("Python", "Proficient") }].sort((a, b) => a.name.localeCompare(b.name))
         }
     };
     
