--- a/interactcvgenerator.html
+++ b/interactcvgenerator.html
@@ -77,10 +77,11 @@
         <div class="bg-white rounded-2xl shadow-lg p-6">
             <h1 class="text-4xl font-bold text-gray-800 mb-2">InteractCV Generator</h1>
 	    <div class="mt-6 flex flex-wrap justify-center gap-2">
-		<span class="text-xs font-medium bg-green-100 text-green-800 px-3 py-1 rounded-full">Works best on PC</span>
+                <span class="text-xs font-medium bg-green-100 text-green-800 px-3 py-1 rounded-full">Applicant tracking system (ATS) Friendly</span>
+		        <span class="text-xs font-medium bg-green-100 text-green-800 px-3 py-1 rounded-full">Works best on PC</span>
                 <span class="text-xs font-medium bg-blue-100 text-blue-800 px-3 py-1 rounded-full">Generates an interactive CV on your browser and downloads it to your PC</span>
                 <span class="text-xs font-medium bg-yellow-100 text-yellow-800 px-3 py-1 rounded-full">No personal information or interaction is tracked</span>
-		<span class="text-xs font-medium bg-green-100 text-green-800 px-3 py-1 rounded-full">No personal data is collected, saved or used</span>
+		        <span class="text-xs font-medium bg-green-100 text-green-800 px-3 py-1 rounded-full">No personal data is collected, saved or used</span>
             </div>
             <p class="text-sm text-gray-500 tracking-wide mb-6">
                 Designed by Vishal Kondabathini, Enhanced with <i class="fas fa-magic text-yellow-500"></i> Google Gemini
