--- a/interactcvgenerator.html
+++ b/interactcvgenerator.html
@@ -114,6 +114,10 @@
                         class="inline-block px-5 py-2.5 bg-gradient-to-r from-blue-500 to-indigo-600 text-white font-semibold rounded-full shadow-md transform hover:scale-105 transition-transform duration-300 text-sm">
                         View My Interactive CV <i class="fas fa-external-link-alt ml-1 text-xs"></i>
                     </a>
+                    <a href="https://viskon.github.io/interactcoverletter.html" target="_blank"
+                        class="inline-block px-5 py-2.5 bg-gradient-to-r from-purple-500 to-pink-500 text-white font-semibold rounded-full shadow-md transform hover:scale-105 transition-transform duration-300 text-sm">
+                        Build a Cover Letter <i class="fas fa-envelope-open-text ml-1 text-xs"></i>
+                    </a>
                 </div>
                  <div class="mt-6 flex flex-wrap justify-center gap-2">
                     <span class="text-xs font-medium bg-gray-100 text-gray-800 px-3 py-1 rounded-full">Applicant tracking system (ATS) Optimized</span>
