Updated with SEO Optimization

--- a/interactcoverletter.html
+++ b/interactcoverletter.html
@@ -1,4 +1,30 @@
+
 <!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Free ATS Optimized Cover Letter Builder</title>
+    <meta name="description" content="Craft the perfect, ATS-optimized cover letter for any job application. Our free builder guides you section by section to create a professional and compelling letter. Download as a Word document.">
+    <meta name="keywords" content="cover letter builder, free cover letter, cover letter generator, ATS cover letter, job application, resume, cv, job seeking, career advice">
+    <meta name="author" content="Vishal Kondabathini">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://viskon.github.io/interactcoverletter.html" />
+    <!-- Open Graph Meta Tags (for social sharing) -->
+    <meta property="og:title" content="Free ATS Optimized Cover Letter Builder" />
+    <meta property="og:description" content="Craft the perfect, ATS-optimized cover letter for any job application. Our free builder guides you section by section to create a professional and compelling letter." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://viskon.github.io/interactcoverletter.html" />
+    <meta property="og:image" content="https://placehold.co/1200x630/eef2f3/8e9eab?text=Cover+Letter%0AGenerator" />
+    <meta property="og:site_name" content="InteractCV Cover Letter Generator" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Free ATS Optimized Cover Letter Builder">
+    <meta name="twitter:description" content="Craft the perfect, ATS-optimized cover letter for any job application. Our free builder guides you section by section to create a professional and compelling letter.">
+    <meta name="twitter:image" content="https://placehold.co/1200x630/eef2f3/8e9eab?text=Cover+Letter%0AGenerator">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
