Added Interactimeline Updated interactcv

--- a/interactcv.html
+++ b/interactcv.html
@@ -1,9 +1,70 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth" data-theme-active="default">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Interactive CV - Vishal Kondabathini</title>
+     <!-- Primary SEO -->
+    <meta name="description" content="Interactive CV of Vishal Kondabathini — product & AI leader. Explore experience, projects, skills, recognitions and contact info.">
+    <link rel="canonical" href="https://viskon.github.io/interactcv.html">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph (social sharing) -->
+    <meta property="og:title" content="Vishal Kondabathini — Interactive CV">
+    <meta property="og:description" content="Explore the interactive CV of Vishal Kondabathini: experience, projects, skills, and contact information.">
+    <meta property="og:url" content="https://viskon.github.io/interactcv.html">
+    <meta property="og:image" content="https://viskon.github.io/assets/og-interactcv.png">
+    <meta property="og:image:alt" content="Vishal Kondabathini — Interactive CV">
+    <meta property="og:type" content="profile">
+    <meta property="og:site_name" content="Vishal Kondabathini — InteractCV">
+
+    <!-- Twitter card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Vishal Kondabathini — Interactive CV">
+    <meta name="twitter:description" content="Interactive CV: experience, projects, skills, and contact information.">
+    <meta name="twitter:image" content="https://viskon.github.io/assets/og-interactcv.png">
+
+    <!-- Preconnect / Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&family=Poppins:wght@500;900&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome (consider self-hosting or minimizing for performance) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Favicon (optional) -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+    <!-- Optional: preload the OG image for faster social previews (ensure file exists) -->
+    <link rel="preload" href="/assets/og-interactcv.png" as="image">
+
+    <!-- Structured Data (JSON-LD) - Person + sample occupation entries -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Vishal Kondabathini",
+        "url": "https://viskon.github.io/interactcv.html",
+        "sameAs": [
+        "https://www.linkedin.com/in/vishalkondabathini/"
+        ],
+        "jobTitle": "Product & AI Leader",
+        "image": "https://viskon.github.io/assets/og-interactcv.png",
+        "email": "mailto:vishal@digitalcubes.org",
+        "telephone": "+46722776202",
+        "knowsAbout": ["Data Science", "AI", "Product Management", "Azure Cloud"],
+        "hasOccupation": [
+        {
+            "@type": "Occupation",
+            "name": "Digital Transformation Strategist",
+            "description": "Strategy, product leadership and digital transformation for enterprise clients."
+        }
+        ]
+    }
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -207,6 +268,13 @@
     </style>
 </head>
 <body class="antialiased">
+
+    <noscript>
+        <div style="padding:1rem; background:#fff3cd; border-left:4px solid #ffeeba; margin:1rem 0;">
+        <h1 style="margin:0; font-size:1.25rem;">Vishal Kondabathini — Product & AI Leader</h1>
+        <p style="margin:0.25rem 0 0;">Product & AI leader experienced in data strategy, cloud, and product development. Contact: <a href="mailto:vishal@digitalcubes.org">vishal@digitalcubes.org</a></p>
+        </div>
+    </noscript>
     <div id="app-container" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <header class="text-center py-12 md:py-16">
             <h1 class="header-font text-5xl md:text-7xl font-black tracking-tighter bg-gradient-to-r from-[var(--color-header-gradient-from)] to-[var(--color-header-gradient-to)] text-transparent bg-clip-text pb-2">VISHAL KONDABATHINI</h1>
