--- a/interactcvgenerator.html
+++ b/interactcvgenerator.html
@@ -150,9 +150,13 @@
                     Designed by Vishal Kondabathini, Enhanced with <i class="fas fa-magic text-yellow-500"></i> Google Gemini
                 </p>
                 <div class="flex justify-center items-center flex-wrap gap-4">
+                    <a href="https://viskon.github.io/interactimeline.html" target="_blank"
+                        class="inline-block px-5 py-2.5 bg-gradient-to-r from-purple-500 to-blue-500 text-white font-semibold rounded-full shadow-md transform hover:scale-105 transition-transform duration-300 text-sm">
+                        My Interactive Timeline <i class="fas fa-envelope-open-text ml-1 text-xs"></i>
+                    </a>
                     <a href="https://viskon.github.io/interactcv.html" target="_blank"
                         class="inline-block px-5 py-2.5 bg-gradient-to-r from-blue-500 to-indigo-600 text-white font-semibold rounded-full shadow-md transform hover:scale-105 transition-transform duration-300 text-sm">
-                        View My Interactive CV <i class="fas fa-external-link-alt ml-1 text-xs"></i>
+                        My Interactive CV <i class="fas fa-external-link-alt ml-1 text-xs"></i>
                     </a>
                     <a href="https://viskon.github.io/interactcoverletter.html" target="_blank"
                         class="inline-block px-5 py-2.5 bg-gradient-to-r from-purple-500 to-pink-500 text-white font-semibold rounded-full shadow-md transform hover:scale-105 transition-transform duration-300 text-sm">
