--- a/interactcv.html
+++ b/interactcv.html
@@ -275,6 +275,20 @@
         <p style="margin:0.25rem 0 0;">Product & AI leader experienced in data strategy, cloud, and product development. Contact: <a href="mailto:vishal@digitalcubes.org">vishal@digitalcubes.org</a></p>
         </div>
     </noscript>
+    <!-- Global Navigation Header -->
+    <nav class="fixed top-0 left-0 right-0 bg-gray-100 shadow-md z-50">
+        <div class="container mx-auto px-4">
+            <div class="flex justify-between items-center py-3">
+                <a href="https://viskon.github.io/interactcvgenerator.html" class="flex items-center space-x-2 text-gray-500 hover:text-indigo-600 transition-colors">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+                    </svg>
+                    <span class="font-semibold text-lg">Interactive CV</span>
+                </a>
+            </div>
+        </div>
+    </nav>
+
     <div id="app-container" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <header class="text-center py-12 md:py-16">
             <h1 class="header-font text-5xl md:text-7xl font-black tracking-tighter bg-gradient-to-r from-[var(--color-header-gradient-from)] to-[var(--color-header-gradient-to)] text-transparent bg-clip-text pb-2">VISHAL KONDABATHINI</h1>
