--- a/interactcvgenerator.html
+++ b/interactcvgenerator.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -142,44 +143,69 @@
 </head>
 <body class="p-4 md:p-8">
 
+        <!-- Global Navigation Header -->
+    <nav class="fixed top-0 left-0 right-0 bg-gray-100 shadow-md z-50">
+        <div class="container mx-auto px-4">
+            <div class="flex justify-between items-center py-3">
+                <a href="https://viskon.github.io/interactcvgenerator.html" class="flex items-center space-x-2 text-gray-500 hover:text-indigo-600 transition-colors">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+                    </svg>
+                    <span class="font-semibold text-lg">InteractCV</span>
+                </a>
+            </div>
+        </div>
+    </nav>
     <div id="main-content">
-        <div class="w-full max-w-7xl mx-auto mb-8 text-center">
-            <div class="bg-white rounded-2xl shadow-lg p-6">
-                <h1 id="back-to-start" class="text-4xl font-extrabold text-gray-800 mb-2 cursor-pointer" title="Back to Start">InteractCV Generator</h1>
-                <p class="text-sm text-gray-500 tracking-wide mb-6">
-                    Designed by Vishal Kondabathini, Enhanced with <i class="fas fa-magic text-yellow-500"></i> Google Gemini
-                </p>
-                <div class="flex justify-center items-center flex-wrap gap-4">
-                    <a href="https://viskon.github.io/interactimeline.html" target="_blank"
-                        class="inline-block px-5 py-2.5 bg-gradient-to-r from-purple-500 to-blue-500 text-white font-semibold rounded-full shadow-md transform hover:scale-105 transition-transform duration-300 text-sm">
+        <header class="bg-white rounded-xl shadow-lg p-8 md:p-12 mb-12 overflow-hidden relative max-w-7xl mx-auto">
+            <div class="absolute top-0 right-0 -mt-24 -mr-24 w-72 h-72 bg-indigo-100 rounded-full opacity-50"></div>
+            <div class="absolute bottom-0 left-0 -mb-24 -ml-24 w-72 h-72 bg-purple-100 rounded-full opacity-50"></div>
+            <div class="relative z-10 flex flex-col md:flex-row items-center text-center md:text-left">
+                <div class="flex-shrink-0 mb-6 md:mb-0 md:mr-10">
+                    <div class="w-32 h-32 bg-indigo-600 rounded-full flex items-center justify-center text-white shadow-lg ring-4 ring-white">
+                        <i class="fas fa-file-invoice text-6xl"></i>
+                    </div>
+                </div>
+                <div>
+                    <h1 class="text-4xl md:text-5xl font-bold text-gray-900">Interactive CV Generator</h1>
+                    <p class="text-lg text-gray-600 mt-4 max-w-2xl">
+                        Craft a stunning, professional interactive CV in minutes. Stand out to recruiters with a modern resume that tells your story.
+                    </p>
+                    <p class="text-sm text-gray-500 tracking-wide mt-4">
+                        Designed by Vishal Kondabathini, Enhanced with <i class="fas fa-magic text-yellow-500"></i> Google Gemini
+                    </p>
+                </div>
+            </div>
+            <div class="relative z-10 mt-8 pt-6 border-t border-gray-200 flex flex-col items-center">
+                <div class="flex justify-center items-center flex-wrap gap-4 mb-6">
+                    <a href="https://viskon.github.io/interactimeline.html" target="_blank" class="inline-block px-5 py-2.5 bg-gradient-to-r from-purple-500 to-blue-500 text-white font-semibold rounded-full shadow-md transform hover:scale-105 transition-transform duration-300 text-sm">
                         My Interactive Timeline <i class="fas fa-external-link-alt ml-1 text-xs"></i>
                     </a>
-                    <a href="https://viskon.github.io/interactcv.html" target="_blank"
-                        class="inline-block px-5 py-2.5 bg-gradient-to-r from-blue-500 to-indigo-600 text-white font-semibold rounded-full shadow-md transform hover:scale-105 transition-transform duration-300 text-sm">
+                    <a href="https://viskon.github.io/interactcv.html" target="_blank" class="inline-block px-5 py-2.5 bg-gradient-to-r from-blue-500 to-indigo-600 text-white font-semibold rounded-full shadow-md transform hover:scale-105 transition-transform duration-300 text-sm">
                         My Interactive CV <i class="fas fa-external-link-alt ml-1 text-xs"></i>
                     </a>
-                    <a href="https://viskon.github.io/interactcoverletter.html" target="_blank"
-                        class="inline-block px-5 py-2.5 bg-gradient-to-r from-purple-500 to-pink-500 text-white font-semibold rounded-full shadow-md transform hover:scale-105 transition-transform duration-300 text-sm">
+                    <a href="https://viskon.github.io/interactcoverletter.html" target="_blank" class="inline-block px-5 py-2.5 bg-gradient-to-r from-purple-500 to-pink-500 text-white font-semibold rounded-full shadow-md transform hover:scale-105 transition-transform duration-300 text-sm">
                         Build a Cover Letter <i class="fas fa-envelope-open-text ml-1 text-xs"></i>
                     </a>
                 </div>
-                 <div class="mt-6 flex flex-wrap justify-center gap-2">
+                <div class="flex flex-wrap justify-center gap-2">
                     <span class="text-xs font-medium bg-gray-100 text-gray-800 px-3 py-1 rounded-full">Applicant tracking system (ATS) Optimized</span>
                     <span class="text-xs font-medium bg-purple-100 text-purple-800 px-3 py-1 rounded-full">Works best on PC</span>
                     <span class="text-xs font-medium bg-blue-100 text-blue-800 px-3 py-1 rounded-full">Generates an interactive CV on your browser and downloads it to your PC</span>
                     <span class="text-xs font-medium bg-yellow-100 text-yellow-800 px-3 py-1 rounded-full">Your usage is not tracked</span>
                     <span class="text-xs font-medium bg-green-100 text-green-800 px-3 py-1 rounded-full">No personal data is collected, saved or used</span>
                 </div>
-                <div class="mt-6 border-t pt-4 flex justify-center items-center gap-4">
-                    <a href="https://create.microsoft.com/en-us/templates/ats-resumes" target="_blank" class="text-xs text-gray-500 hover:text-blue-600 font-semibold transition">
-                        <i class="fas fa-file-alt mr-1"></i> ATS Resume Templates
-                    </a>
-                    <a href="https://create.microsoft.com/en-us/templates/cover-letters" target="_blank" class="text-xs text-gray-500 hover:text-blue-600 font-semibold transition">
-                        <i class="fas fa-envelope-open-text mr-1"></i> Cover Letter Templates
-                    </a>
+				<div class="flex flex-wrap justify-center gap-2">
+                    <p id="visit-counter" class="text-sm flex items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1.5" viewBox="0 0 20 20" fill="currentColor">
+                              <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
+                              <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.022 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+                            </svg>
+                            Anonymous Visits: <span id="visit-count" class="font-semibold ml-1">0</span>
+                    </p>
                 </div>
             </div>
-        </div>
+        </header>
 
         <div class="w-full max-w-7xl mx-auto lg:grid lg:grid-cols-2 lg:gap-8 lg:items-start">
             <!-- Builder Card -->
@@ -1495,6 +1521,13 @@
             updateNavButtons();
             updateProgressBar();
             updatePreview();
+			
+			// Visit Counter Logic
+			const visitCountElement = document.getElementById('visit-count');
+			let visitCount = localStorage.getItem('interactCVVisits');
+			visitCount = visitCount ? parseInt(visitCount) + 1 : 1;
+			localStorage.setItem('interactCVVisits', visitCount);
+			visitCountElement.textContent = visitCount;
         });
     </script>
 </body>
